--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/kiranbnkk/myknowledgekit">View on GitHub</a>
-
+          
           <h1 id="project_title">Myknowledgekit</h1>
           <h2 id="project_tagline">Myknowledgekit</h2>
         </header>
@@ -33,8 +32,7 @@
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Myknowledgekit maintained by <a href="https://github.com/kiranbnkk">kiranbnkk</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+        <p class="copyright">Myknowledgekit maintained by KIRAN KUMAR B N</a></p>
       </footer>
     </div>
 
